--- a/notebooks/01_merging_first_solutions_results.ipynb
+++ b/notebooks/01_merging_first_solutions_results.ipynb
@@ -17,9 +17,11 @@
    "source": [
     "number_of_solutions = 10\n",
     "\n",
-    "reference_data = pd.read_csv('../reference_data/instances.csv')\n",
-    "single_solutions_results = pd.read_csv('../results/single_solution.csv')\n",
-    "multiple_solutions_results = pd.read_csv(f'../results/multiple_solutions_{number_of_solutions}.csv')"
+    "reference_data = pd.read_csv(\"../reference_data/instances.csv\")\n",
+    "single_solutions_results = pd.read_csv(\"../results/single_solution.csv\")\n",
+    "multiple_solutions_results = pd.read_csv(\n",
+    "    f\"../results/multiple_solutions_{number_of_solutions}.csv\"\n",
+    ")"
    ]
   },
   {
@@ -28,8 +30,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merged = pd.merge(single_solutions_results, multiple_solutions_results, on='Instance', suffixes=('_single', '_multiple'))\n",
-    "merged = pd.merge(merged, reference_data, on='Instance')"
+    "merged = pd.merge(\n",
+    "    single_solutions_results,\n",
+    "    multiple_solutions_results,\n",
+    "    on=\"Instance\",\n",
+    "    suffixes=(\"_single\", \"_multiple\"),\n",
+    ")\n",
+    "merged = pd.merge(merged, reference_data, on=\"Instance\")"
    ]
   },
   {
@@ -1066,32 +1073,36 @@
     }
    ],
    "source": [
-    "merged_tuned = merged.rename(columns={\n",
-    "    'k': 'R_r',\n",
-    "    'BKS': 'cost_best',\n",
-    "    'vehicle_number_original_single': 'R_o',\n",
-    "    'single_solution_cost': 'ss_cost',\n",
-    "    'vehicle_number_obtained': 'ss_R',\n",
-    "    'time_single': 'ss_time',\n",
-    "    'minimum_cost': 'ms_min_cost',\n",
-    "    'average_cost': 'ms_avg_cost',\n",
-    "    'minimum_vehicle_number_obtained': 'ms_min_R',\n",
-    "    'average_vehicle_number_obtained': 'ms_avg_R',\n",
-    "    'time_multiple': 'ms_time',\n",
-    "})[[\n",
-    "    'Instance',\n",
-    "    'R_r',\n",
-    "    'cost_best',\n",
-    "    'R_o',\n",
-    "    'ss_cost',\n",
-    "    'ss_R',\n",
-    "    'ss_time',\n",
-    "    'ms_min_cost',\n",
-    "    'ms_avg_cost',\n",
-    "    'ms_min_R',\n",
-    "    'ms_avg_R',\n",
-    "    'ms_time',\n",
-    "]]\n",
+    "merged_tuned = merged.rename(\n",
+    "    columns={\n",
+    "        \"k\": \"R_r\",\n",
+    "        \"BKS\": \"cost_best\",\n",
+    "        \"vehicle_number_original_single\": \"R_o\",\n",
+    "        \"single_solution_cost\": \"ss_cost\",\n",
+    "        \"vehicle_number_obtained\": \"ss_R\",\n",
+    "        \"time_single\": \"ss_time\",\n",
+    "        \"minimum_cost\": \"ms_min_cost\",\n",
+    "        \"average_cost\": \"ms_avg_cost\",\n",
+    "        \"minimum_vehicle_number_obtained\": \"ms_min_R\",\n",
+    "        \"average_vehicle_number_obtained\": \"ms_avg_R\",\n",
+    "        \"time_multiple\": \"ms_time\",\n",
+    "    }\n",
+    ")[\n",
+    "    [\n",
+    "        \"Instance\",\n",
+    "        \"R_r\",\n",
+    "        \"cost_best\",\n",
+    "        \"R_o\",\n",
+    "        \"ss_cost\",\n",
+    "        \"ss_R\",\n",
+    "        \"ss_time\",\n",
+    "        \"ms_min_cost\",\n",
+    "        \"ms_avg_cost\",\n",
+    "        \"ms_min_R\",\n",
+    "        \"ms_avg_R\",\n",
+    "        \"ms_time\",\n",
+    "    ]\n",
+    "]\n",
     "\n",
     "merged_tuned"
    ]
@@ -1190,9 +1201,11 @@
     }
    ],
    "source": [
-    "merged['ss_best_diff_percentage'] = (merged['single_solution_cost'] - merged['BKS']) / merged['BKS'] * 100\n",
+    "merged[\"ss_best_diff_percentage\"] = (\n",
+    "    (merged[\"single_solution_cost\"] - merged[\"BKS\"]) / merged[\"BKS\"] * 100\n",
+    ")\n",
     "\n",
-    "print(merged['ss_best_diff_percentage'].mean())"
+    "print(merged[\"ss_best_diff_percentage\"].mean())"
    ]
   },
   {
@@ -1690,7 +1703,9 @@
     }
    ],
    "source": [
-    "merged[['ss_best_diff_percentage', 'BKS', 'single_solution_cost', 'Instance']].sort_values('ss_best_diff_percentage')"
+    "merged[\n",
+    "    [\"ss_best_diff_percentage\", \"BKS\", \"single_solution_cost\", \"Instance\"]\n",
+    "].sort_values(\"ss_best_diff_percentage\")"
    ]
   },
   {
@@ -1707,9 +1722,11 @@
     }
    ],
    "source": [
-    "merged['ms_best_diff_percentage'] = (merged['minimum_cost'] - merged['BKS']) / merged['BKS'] * 100\n",
+    "merged[\"ms_best_diff_percentage\"] = (\n",
+    "    (merged[\"minimum_cost\"] - merged[\"BKS\"]) / merged[\"BKS\"] * 100\n",
+    ")\n",
     "\n",
-    "print(merged['ms_best_diff_percentage'].mean())"
+    "print(merged[\"ms_best_diff_percentage\"].mean())"
    ]
   },
   {
@@ -2207,7 +2224,9 @@
     }
    ],
    "source": [
-    "merged[['ms_best_diff_percentage', 'BKS', 'minimum_cost', 'Instance']].sort_values('ms_best_diff_percentage')"
+    "merged[[\"ms_best_diff_percentage\", \"BKS\", \"minimum_cost\", \"Instance\"]].sort_values(\n",
+    "    \"ms_best_diff_percentage\"\n",
+    ")"
    ]
   },
   {
@@ -2227,7 +2246,7 @@
     }
    ],
    "source": [
-    "merged['time_single'].mean(), merged['time_multiple'].mean()"
+    "merged[\"time_single\"].mean(), merged[\"time_multiple\"].mean()"
    ]
   },
   {
