--- a/notebooks/02_merging_intensification_results.ipynb
+++ b/notebooks/02_merging_intensification_results.ipynb
@@ -15,8 +15,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "single_solutions_results = pd.read_csv('../results/second-delivery/single_solution.csv')\n",
-    "intensification_two_opt = pd.read_csv('../results/third-delivery/two_opt_intensification.csv')"
+    "single_solutions_results = pd.read_csv(\"../results/second-delivery/single_solution.csv\")\n",
+    "intensification_two_opt = pd.read_csv(\n",
+    "    \"../results/third-delivery/two_opt_intensification.csv\"\n",
+    ")"
    ]
   },
   {
@@ -25,7 +27,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merged = pd.merge(single_solutions_results, intensification_two_opt, on='Instance', suffixes=('_single', '_two_opt'))"
+    "merged = pd.merge(\n",
+    "    single_solutions_results,\n",
+    "    intensification_two_opt,\n",
+    "    on=\"Instance\",\n",
+    "    suffixes=(\"_single\", \"_two_opt\"),\n",
+    ")"
    ]
   },
   {
@@ -66,9 +73,13 @@
     }
    ],
    "source": [
-    "merged['intensification_improvement_percentage'] = (merged['single_solution_cost'] - merged['local_optimum_solution_cost']) / merged['single_solution_cost'] * 100\n",
+    "merged[\"intensification_improvement_percentage\"] = (\n",
+    "    (merged[\"single_solution_cost\"] - merged[\"local_optimum_solution_cost\"])\n",
+    "    / merged[\"single_solution_cost\"]\n",
+    "    * 100\n",
+    ")\n",
     "\n",
-    "print(merged['intensification_improvement_percentage'].mean())"
+    "print(merged[\"intensification_improvement_percentage\"].mean())"
    ]
   },
   {
@@ -680,20 +691,24 @@
     }
    ],
    "source": [
-    "merged_tuned = merged.rename(columns={\n",
-    "    'single_solution_cost': 'ss_cost',\n",
-    "    'vehicle_number_obtained_single': 'ss_R',\n",
-    "    \"local_optimum_solution_cost\": 'i_cost',\n",
-    "    \"intensification_improvement_percentage\": 'delta_cost',\n",
-    "    'time_two_opt': 'i_time',\n",
-    "})[[\n",
-    "    'Instance',\n",
-    "    'ss_R',\n",
-    "    'ss_cost',\n",
-    "    'i_cost',\n",
-    "    'delta_cost',\n",
-    "    'i_time',\n",
-    "]]\n",
+    "merged_tuned = merged.rename(\n",
+    "    columns={\n",
+    "        \"single_solution_cost\": \"ss_cost\",\n",
+    "        \"vehicle_number_obtained_single\": \"ss_R\",\n",
+    "        \"local_optimum_solution_cost\": \"i_cost\",\n",
+    "        \"intensification_improvement_percentage\": \"delta_cost\",\n",
+    "        \"time_two_opt\": \"i_time\",\n",
+    "    }\n",
+    ")[\n",
+    "    [\n",
+    "        \"Instance\",\n",
+    "        \"ss_R\",\n",
+    "        \"ss_cost\",\n",
+    "        \"i_cost\",\n",
+    "        \"delta_cost\",\n",
+    "        \"i_time\",\n",
+    "    ]\n",
+    "]\n",
     "\n",
     "merged_tuned"
    ]
@@ -1338,7 +1353,7 @@
     }
    ],
    "source": [
-    "merged['time_two_opt'].mean()"
+    "merged[\"time_two_opt\"].mean()"
    ]
   },
   {
